--- a/.gitignore
+++ b/.gitignore
@@ -285,3 +285,5 @@ cython_debug/
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,visualstudiocode,python,jupyternotebooks,opencv
+
+*.json
